# ruvector

./: .gitignore  AGENT_11_DELIVERABLES.txt  ANALYSIS_AGENT_11_SUMMARY.md  ANALYSIS_AGENT_15_SUMMARY.md  ANALYSIS_AGENT_6_INDEX.md  Cargo.toml  ORBITAL_POLE_CLUSTERING_INDEX.md  README.md  README_ORBITAL_POLE_CLUSTERING.md
.github/workflows/: agentic-synth-ci.yml  build-native.yml  ruvllm-native.yml  sona-napi.yml
crates/ruvector-cli/: Cargo.toml
crates/ruvector-mincut/: Cargo.toml  README.md
crates/ruvector-mincut-node/src/: lib.rs
crates/ruvector-mincut-wasm/: Cargo.toml
crates/ruvector-mincut-wasm/src/: lib.rs
crates/ruvector-mincut/src/: lib.rs
crates/ruvector-mincut/src/algorithm/: mod.rs
crates/ruvector-mincut/src/euler/: mod.rs
crates/ruvector-mincut/src/linkcut/: mod.rs
crates/ruvector-node/src/: lib.rs
crates/ruvector-postgres/: Cargo.toml  Dockerfile
crates/ruvector-postgres/sql/: ruvector--0.1.0.sql
crates/ruvector-postgres/src/distance/: simd.rs
crates/ruvector-postgres/src/index/: hnsw.rs
crates/ruvector-wasm/: Cargo.toml
crates/sona/: Cargo.toml  LICENSE-APACHE  README.md
crates/sona/src/training/: factory.rs  federated.rs  mod.rs  pipeline.rs
docker/: Dockerfile.combined  Dockerfile.studio
docs/: ANALYSIS_AGENT_15_ORBITAL_POLE_CLUSTERING.md  OPTIMIZATION_REPORT.md  ORBITAL_POLE_CLUSTERING_TECHNICAL_SPEC.md
examples/: AGENT12_EXECUTIVE_SUMMARY.txt  AGENT_5_QUICK_REFERENCE.md  ANALYSIS_FINDINGS_SUMMARY.txt  DELIVERABLES_INDEX.txt  README_AGENT_5_SMA_GAP_ANALYSIS.md  dynamical_stability_analysis.rs  kuiper_belt_kozai_lidov.rs  orbital_pole_clustering.py  orbital_pole_clustering.rs
examples/apify/agentic-synth/: README.md
examples/apify/agentic-synth/.actor/: actor.json  pay_per_event.json
examples/apify/agentic-synth/src/: main.js
examples/apify/agentic-synth/storage/key_value_stores/default/: INPUT.json
examples/apify/ai-memory-engine/.actor/: input_schema.json
examples/apify/ai-memory-engine/src/: main.js
examples/apify/neural-trader-system/.actor/: input_schema.json
examples/conceptnet-integration/: Cargo.toml
examples/onnx-embeddings/src/gpu/: backend.rs
examples/ruvLLM/: Cargo.toml
examples/ruvLLM/docs/diffusion/: DEPENDENCIES.md
examples/ruvLLM/src/: attention.rs  embedding.rs  error.rs  inference.rs  learning.rs  lib.rs  memory.rs  orchestrator.rs  router.rs
examples/subpolynomial-time/: README.md
examples/subpolynomial-time/src/: main.rs
examples/ultra-low-latency-sim/: Cargo.toml
examples/ultra-low-latency-sim/src/: lib.rs  main.rs
npm/studio/: README.md  package.json
scripts/: run_benchmarks.sh
src/: orbital_pole_clustering.ts
