[package]
name = "ruvector-mincut-wasm"
version.workspace = true
edition.workspace = true
description = "WASM bindings for subpolynomial-time dynamic minimum cut"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ruvector-mincut = { path = "../ruvector-mincut", default-features = false, features = ["wasm"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[features]
default = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
