[package]
name = "ruvllm"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["Ruvector Team"]
description = "Self-learning LLM with LFM2 and Ruvector integration"
repository = "https://github.com/ruvnet/ruvector"
readme = "README.md"
keywords = ["llm", "self-learning", "vector-database", "rag", "lfm2"]
categories = ["science", "machine-learning"]

[dependencies]
# Internal dependencies
ruvector-core = { path = "../../crates/ruvector-core", default-features = false }
ruvector-gnn = { path = "../../crates/ruvector-gnn", default-features = false }
ruvector-attention = { path = "../../crates/ruvector-attention" }
ruvector-graph = { path = "../../crates/ruvector-graph" }

# Async runtime
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "macros", "time"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
toml = "0.8"

# Numerics
ndarray = { version = "0.16", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"

# Performance
dashmap = "6.1"
parking_lot = "0.12"
lru = "0.12"
rayon = "1.10"

# Metrics
prometheus = { version = "0.13", optional = true }

# HTTP (optional server)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tokio-test = "0.4"
tempfile = "3.13"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["storage", "metrics"]
storage = ["ruvector-core/storage", "ruvector-core/hnsw"]
metrics = ["prometheus"]
server = ["axum", "tower"]
full = ["storage", "metrics", "server"]

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "router"
harness = false

[[bench]]
name = "memory"
harness = false

[lib]
name = "ruvllm"
path = "src/lib.rs"

[[bin]]
name = "ruvllm-server"
path = "src/bin/server.rs"
required-features = ["server"]
